swancore/src/main/java/interdroid/swancore/swansong/SwanExpressionParser.java
// $ANTLR 3.5.2 SwanExpression.g 2016-03-31 18:26:44

package interdroid.swancore.swansong;

import android.os.Bundle;

import org.antlr.runtime.ANTLRStringStream;
import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.CharStream;
import org.antlr.runtime.CommonTokenStream;
import org.antlr.runtime.DFA;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;

import java.util.Stack;

@SuppressWarnings("all")
public class SwanExpressionParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALL", "AND", "ANY", "CONFIG_HASH",
            "CONFIG_IS", "CONFIG_TILT", "CONFIG_VAL", "CONTAINS", "DIV", "EQUALS",
            "ESC_SEQ", "EXPONENT", "FLOAT", "GT", "GTEQ", "HEX_DIGIT", "ID", "INT",
            "LT", "LTEQ", "MAX", "MEAN", "MEDIAN", "MIN", "MINUS", "MOD", "MULT",
            "NONE", "NOT", "NOTEQUALS", "OR", "PLUS", "REGEX", "STRING", "TIME_UNIT",
            "WS", "'$'", "'('", "')'", "','", "'.'", "':'", "'?'", "'@'", "'{'", "'}'"
    };
    public static final int EOF = -1;
    public static final int T__40 = 40;
    public static final int T__41 = 41;
    public static final int T__42 = 42;
    public static final int T__43 = 43;
    public static final int T__44 = 44;
    public static final int T__45 = 45;
    public static final int T__46 = 46;
    public static final int T__47 = 47;
    public static final int T__48 = 48;
    public static final int T__49 = 49;
    public static final int ALL = 4;
    public static final int AND = 5;
    public static final int ANY = 6;
    public static final int CONFIG_HASH = 7;
    public static final int CONFIG_IS = 8;
    public static final int CONFIG_TILT = 9;
    public static final int CONFIG_VAL = 10;
    public static final int CONTAINS = 11;
    public static final int DIV = 12;
    public static final int EQUALS = 13;
    public static final int ESC_SEQ = 14;
    public static final int EXPONENT = 15;
    public static final int FLOAT = 16;
    public static final int GT = 17;
    public static final int GTEQ = 18;
    public static final int HEX_DIGIT = 19;
    public static final int ID = 20;
    public static final int INT = 21;
    public static final int LT = 22;
    public static final int LTEQ = 23;
    public static final int MAX = 24;
    public static final int MEAN = 25;
    public static final int MEDIAN = 26;
    public static final int MIN = 27;
    public static final int MINUS = 28;
    public static final int MOD = 29;
    public static final int MULT = 30;
    public static final int NONE = 31;
    public static final int NOT = 32;
    public static final int NOTEQUALS = 33;
    public static final int OR = 34;
    public static final int PLUS = 35;
    public static final int REGEX = 36;
    public static final int STRING = 37;
    public static final int TIME_UNIT = 38;
    public static final int WS = 39;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[]{};
    }

    // delegators


    public SwanExpressionParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public SwanExpressionParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    @Override
    public String[] getTokenNames() {
        return SwanExpressionParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "SwanExpression.g";
    }


    public static final Expression parseExpression(final String expression) throws ExpressionParseException {
        if (expression == null || expression.trim().length() == 0)
            return null;

        CharStream stream = new ANTLRStringStream(expression);
        SwanExpressionLexer lexer = new SwanExpressionLexer(stream);
        TokenStream tokenStream = new CommonTokenStream(lexer);
        SwanExpressionParser parser = new SwanExpressionParser(tokenStream);
        try {
            return parser.expression() /* .expression */;
        } catch (RecognitionException e) {
            throw new ExpressionParseException(e);
        }
    }

    public static final long convertTime(Token time, Token unit) {
        long unitFactor = 1;
        if (unit != null) {
            String unitText = unit.getText();
            if (unitText.equals("h") || unitText.equals("H")) {
                unitFactor = 60 * 60 * 1000;
            } else if (unitText.equals("m") || unitText.equals("M")) {
                unitFactor = 60 * 1000;
            } else if (unitText.equals("s") || unitText.equals("S")) {
                unitFactor = 1000;
            }
        }
        return Long.parseLong(time.getText()) * unitFactor;
    }


    // $ANTLR start "http_configuration_options"
    // SwanExpression.g:53:1: http_configuration_options returns [Bundle http_configuration] : (hid= ID hval= CONFIG_VAL ) ( CONFIG_TILT more_hid= ID more_hval= CONFIG_VAL )* ;
    public final Bundle http_configuration_options() throws RecognitionException {
        Bundle http_configuration = null;


        Token hid = null;
        Token hval = null;
        Token more_hid = null;
        Token more_hval = null;


        Bundle http_config = new Bundle();

        try {
            // SwanExpression.g:57:2: ( (hid= ID hval= CONFIG_VAL ) ( CONFIG_TILT more_hid= ID more_hval= CONFIG_VAL )* )
            // SwanExpression.g:58:2: (hid= ID hval= CONFIG_VAL ) ( CONFIG_TILT more_hid= ID more_hval= CONFIG_VAL )*
            {
                // SwanExpression.g:58:2: (hid= ID hval= CONFIG_VAL )
                // SwanExpression.g:58:3: hid= ID hval= CONFIG_VAL
                {
                    hid = (Token) match(input, ID, FOLLOW_ID_in_http_configuration_options62);
                    hval = (Token) match(input, CONFIG_VAL, FOLLOW_CONFIG_VAL_in_http_configuration_options66);
                }

                http_config.putString(hid.getText(), hval.getText().substring(1));
                // SwanExpression.g:60:2: ( CONFIG_TILT more_hid= ID more_hval= CONFIG_VAL )*
                loop1:
                while (true) {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);
                    if ((LA1_0 == CONFIG_TILT)) {
                        alt1 = 1;
                    }

                    switch (alt1) {
                        case 1:
                            // SwanExpression.g:60:3: CONFIG_TILT more_hid= ID more_hval= CONFIG_VAL
                        {
                            match(input, CONFIG_TILT, FOLLOW_CONFIG_TILT_in_http_configuration_options76);
                            more_hid = (Token) match(input, ID, FOLLOW_ID_in_http_configuration_options80);
                            more_hval = (Token) match(input, CONFIG_VAL, FOLLOW_CONFIG_VAL_in_http_configuration_options84);
                            System.out.println(more_hval.getText().substring(1));
                            http_config.putString(more_hid.getText(), more_hval.getText().substring(1));
                        }
                        break;

                        default:
                            break loop1;
                    }
                }

                http_configuration = http_config;
            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return http_configuration;
    }
    // $ANTLR end "http_configuration_options"


    // $ANTLR start "configuration_options"
    // SwanExpression.g:68:1: configuration_options returns [Bundle configuration] : (id= ID val= CONFIG_VAL ) ( CONFIG_HASH more_id= ID more_val= CONFIG_VAL )* ;
    public final Bundle configuration_options() throws RecognitionException {
        Bundle configuration = null;


        Token id = null;
        Token val = null;
        Token more_id = null;
        Token more_val = null;


        Bundle config = new Bundle();

        try {
            // SwanExpression.g:72:2: ( (id= ID val= CONFIG_VAL ) ( CONFIG_HASH more_id= ID more_val= CONFIG_VAL )* )
            // SwanExpression.g:73:2: (id= ID val= CONFIG_VAL ) ( CONFIG_HASH more_id= ID more_val= CONFIG_VAL )*
            {
                // SwanExpression.g:73:2: (id= ID val= CONFIG_VAL )
                // SwanExpression.g:73:3: id= ID val= CONFIG_VAL
                {
                    id = (Token) match(input, ID, FOLLOW_ID_in_configuration_options123);
                    val = (Token) match(input, CONFIG_VAL, FOLLOW_CONFIG_VAL_in_configuration_options127);
                }

                config.putString(id.getText(), val.getText().substring(1));
                // SwanExpression.g:75:2: ( CONFIG_HASH more_id= ID more_val= CONFIG_VAL )*
                loop2:
                while (true) {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);
                    if ((LA2_0 == CONFIG_HASH)) {
                        alt2 = 1;
                    }

                    switch (alt2) {
                        case 1:
                            // SwanExpression.g:75:3: CONFIG_HASH more_id= ID more_val= CONFIG_VAL
                        {
                            match(input, CONFIG_HASH, FOLLOW_CONFIG_HASH_in_configuration_options137);
                            more_id = (Token) match(input, ID, FOLLOW_ID_in_configuration_options141);
                            more_val = (Token) match(input, CONFIG_VAL, FOLLOW_CONFIG_VAL_in_configuration_options145);
                            config.putString(more_id.getText(), more_val.getText().substring(1));
                        }
                        break;

                        default:
                            break loop2;
                    }
                }

                configuration = config;
            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return configuration;
    }
    // $ANTLR end "configuration_options"


    // $ANTLR start "value_path"
    // SwanExpression.g:81:1: value_path returns [String value_path] : vp= v_p ( '.' more_id= v_p )* ;
    public final String value_path() throws RecognitionException {
        String value_path = null;


        String vp = null;
        String more_id = null;


        StringBuffer buf = new StringBuffer();

        try {
            // SwanExpression.g:85:2: (vp= v_p ( '.' more_id= v_p )* )
            // SwanExpression.g:86:2: vp= v_p ( '.' more_id= v_p )*
            {
                pushFollow(FOLLOW_v_p_in_value_path181);
                vp = v_p();
                state._fsp--;

                buf.append(vp);
                // SwanExpression.g:88:2: ( '.' more_id= v_p )*
                loop3:
                while (true) {
                    int alt3 = 2;
                    int LA3_0 = input.LA(1);
                    if ((LA3_0 == 44)) {
                        alt3 = 1;
                    }

                    switch (alt3) {
                        case 1:
                            // SwanExpression.g:88:3: '.' more_id= v_p
                        {
                            match(input, 44, FOLLOW_44_in_value_path190);
                            pushFollow(FOLLOW_v_p_in_value_path194);
                            more_id = v_p();
                            state._fsp--;

                            buf.append('.');
                            buf.append(vp);
                        }
                        break;

                        default:
                            break loop3;
                    }
                }

                value_path = buf.toString();
            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return value_path;
    }
    // $ANTLR end "value_path"


    // $ANTLR start "v_p"
    // SwanExpression.g:94:1: v_p returns [String vp] : (id= ID |str= STRING );
    public final String v_p() throws RecognitionException {
        String vp = null;


        Token id = null;
        Token str = null;

        try {
            // SwanExpression.g:95:2: (id= ID |str= STRING )
            int alt4 = 2;
            int LA4_0 = input.LA(1);
            if ((LA4_0 == ID)) {
                alt4 = 1;
            } else if ((LA4_0 == STRING)) {
                alt4 = 2;
            } else {
                NoViableAltException nvae =
                        new NoViableAltException("", 4, 0, input);
                throw nvae;
            }

            switch (alt4) {
                case 1:
                    // SwanExpression.g:95:4: id= ID
                {
                    id = (Token) match(input, ID, FOLLOW_ID_in_v_p226);
                    vp = id.getText();
                }
                break;
                case 2:
                    // SwanExpression.g:96:4: str= STRING
                {
                    str = (Token) match(input, STRING, FOLLOW_STRING_in_v_p235);
                    vp = str.getText();
                }
                break;

            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return vp;
    }
    // $ANTLR end "v_p"


    // $ANTLR start "comparator"
    // SwanExpression.g:99:1: comparator returns [Comparator comparator] : ( GT | LT | GTEQ | LTEQ | EQUALS | NOTEQUALS | REGEX | CONTAINS );
    public final Comparator comparator() throws RecognitionException {
        Comparator comparator = null;


        try {
            // SwanExpression.g:100:2: ( GT | LT | GTEQ | LTEQ | EQUALS | NOTEQUALS | REGEX | CONTAINS )
            int alt5 = 8;
            switch (input.LA(1)) {
                case GT: {
                    alt5 = 1;
                }
                break;
                case LT: {
                    alt5 = 2;
                }
                break;
                case GTEQ: {
                    alt5 = 3;
                }
                break;
                case LTEQ: {
                    alt5 = 4;
                }
                break;
                case EQUALS: {
                    alt5 = 5;
                }
                break;
                case NOTEQUALS: {
                    alt5 = 6;
                }
                break;
                case REGEX: {
                    alt5 = 7;
                }
                break;
                case CONTAINS: {
                    alt5 = 8;
                }
                break;
                default:
                    NoViableAltException nvae =
                            new NoViableAltException("", 5, 0, input);
                    throw nvae;
            }
            switch (alt5) {
                case 1:
                    // SwanExpression.g:100:4: GT
                {
                    match(input, GT, FOLLOW_GT_in_comparator252);
                    comparator = Comparator.GREATER_THAN;
                }
                break;
                case 2:
                    // SwanExpression.g:101:4: LT
                {
                    match(input, LT, FOLLOW_LT_in_comparator259);
                    comparator = Comparator.LESS_THAN;
                }
                break;
                case 3:
                    // SwanExpression.g:102:4: GTEQ
                {
                    match(input, GTEQ, FOLLOW_GTEQ_in_comparator266);
                    comparator = Comparator.GREATER_THAN_OR_EQUALS;
                }
                break;
                case 4:
                    // SwanExpression.g:103:4: LTEQ
                {
                    match(input, LTEQ, FOLLOW_LTEQ_in_comparator273);
                    comparator = Comparator.LESS_THAN_OR_EQUALS;
                }
                break;
                case 5:
                    // SwanExpression.g:104:4: EQUALS
                {
                    match(input, EQUALS, FOLLOW_EQUALS_in_comparator280);
                    comparator = Comparator.EQUALS;
                }
                break;
                case 6:
                    // SwanExpression.g:105:4: NOTEQUALS
                {
                    match(input, NOTEQUALS, FOLLOW_NOTEQUALS_in_comparator287);
                    comparator = Comparator.NOT_EQUALS;
                }
                break;
                case 7:
                    // SwanExpression.g:106:4: REGEX
                {
                    match(input, REGEX, FOLLOW_REGEX_in_comparator294);
                    comparator = Comparator.REGEX_MATCH;
                }
                break;
                case 8:
                    // SwanExpression.g:107:4: CONTAINS
                {
                    match(input, CONTAINS, FOLLOW_CONTAINS_in_comparator301);
                    comparator = Comparator.STRING_CONTAINS;
                }
                break;

            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return comparator;
    }
    // $ANTLR end "comparator"


    // $ANTLR start "logic_operator"
    // SwanExpression.g:110:1: logic_operator returns [LogicOperator logic_operator] : (binary= binary_logic_operator |unary= unary_logic_operator );
    public final LogicOperator logic_operator() throws RecognitionException {
        LogicOperator logic_operator = null;


        BinaryLogicOperator binary = null;
        UnaryLogicOperator unary = null;

        try {
            // SwanExpression.g:111:2: (binary= binary_logic_operator |unary= unary_logic_operator )
            int alt6 = 2;
            int LA6_0 = input.LA(1);
            if ((LA6_0 == AND || LA6_0 == OR)) {
                alt6 = 1;
            } else if ((LA6_0 == NOT)) {
                alt6 = 2;
            } else {
                NoViableAltException nvae =
                        new NoViableAltException("", 6, 0, input);
                throw nvae;
            }

            switch (alt6) {
                case 1:
                    // SwanExpression.g:112:3: binary= binary_logic_operator
                {
                    pushFollow(FOLLOW_binary_logic_operator_in_logic_operator323);
                    binary = binary_logic_operator();
                    state._fsp--;

                    logic_operator = binary /* .logic_operator */;
                }
                break;
                case 2:
                    // SwanExpression.g:114:4: unary= unary_logic_operator
                {
                    pushFollow(FOLLOW_unary_logic_operator_in_logic_operator336);
                    unary = unary_logic_operator();
                    state._fsp--;

                    logic_operator = unary /* .logic_operator */;
                }
                break;

            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return logic_operator;
    }
    // $ANTLR end "logic_operator"


    // $ANTLR start "binary_logic_operator"
    // SwanExpression.g:118:1: binary_logic_operator returns [BinaryLogicOperator logic_operator] : ( AND | OR );
    public final BinaryLogicOperator binary_logic_operator() throws RecognitionException {
        BinaryLogicOperator logic_operator = null;


        try {
            // SwanExpression.g:119:2: ( AND | OR )
            int alt7 = 2;
            int LA7_0 = input.LA(1);
            if ((LA7_0 == AND)) {
                alt7 = 1;
            } else if ((LA7_0 == OR)) {
                alt7 = 2;
            } else {
                NoViableAltException nvae =
                        new NoViableAltException("", 7, 0, input);
                throw nvae;
            }

            switch (alt7) {
                case 1:
                    // SwanExpression.g:119:4: AND
                {
                    match(input, AND, FOLLOW_AND_in_binary_logic_operator357);
                    logic_operator = BinaryLogicOperator.AND;
                }
                break;
                case 2:
                    // SwanExpression.g:120:4: OR
                {
                    match(input, OR, FOLLOW_OR_in_binary_logic_operator364);
                    logic_operator = BinaryLogicOperator.OR;
                }
                break;

            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return logic_operator;
    }
    // $ANTLR end "binary_logic_operator"

